@@ -454,6 +454,7 @@
 "Go to composer":"",
 "Move the queue to:":"",
 "Music sources":"",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":"",
 "No results found":"",
 "Playing %1":"",
 "Playing %1 by %2":"",
