@@ -456,6 +456,7 @@
 "Follow link":"",
 "Move the queue to:":"",
 "Music sources":"",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":"",
 "No results found":"",
 "Playing %1":"",
 "Playing %1 by %2":"",
