@@ -18,7 +18,9 @@
 "Add podcast":"Podcast hinzufügen",
 "Add selection to queue":"Auswahl zur Warteschlange hinzufügen",
 "Add to favorites":"In Favoriten speichern",
+"Add to playlist":"Zur Wiedergabeliste hinzufügen",
 "Added '%1'":"'%1' hinzugefügt",
+"Added to '%1'":"Zu '%1' hinzugefügt",
 "Added to favorites":"Favorit wurde gespeichert",
 "Adding albums...":"Alben hinzufügen...",
 "Adding tracks...":"Titel hinzufügen...",
@@ -33,6 +35,7 @@
 "Albums":"Alben",
 "All":"Alle",
 "All Artists":"Alle Interpreten",
+"All duplicates removed":"Alle doppelten Einträge entfernt",
 "All options":"Alle Optionen",
 "Alphabetically sort favorites, rather than server supplied order.":"Sortiere Favoriten alphabetisch (ignoriere Einstellung des Servers)",
 "Already in favorites":"Bereits in Favoriten",
@@ -119,6 +122,7 @@
 "Edit alarm":"Wecker bearbeiten",
 "Edit favorite":"Favorit bearbeiten",
 "Edit group player":"Gerätegruppe bearbeiten",
+"Edit podcast":"Podcast bearbeiten",
 "Empty":"Leer",
 "Enable alarm fuctionality.":"Wecker aktivieren",
 "Enable alarms":"Wecker aktivieren",
@@ -131,8 +135,11 @@
 "Fade out":"Ausblenden",
 "Failed":"Fehlgeschlagen",
 "Failed add podcast":"Fehler beim Hinzufügen des Podcasts!",
+"Failed edit podcast":"Fehler beim Bearbeiten des Podcasts",
 "Failed to add to favorites!":"Fehler beim Hinzufügen zu Favoriten!",
+"Failed to add to playlist!":"Fehler beim Hinzufügen zur Wiedergabeliste",
 "Failed to delete playlist!":"Fehler beim Löschen der Playlist!",
+"Failed to fetch podcast URL":"Fehler beim Abrufen der Podcast-URL",
 "Failed to find an album!":"Fehler bei der Albumsuche!",
 "Failed to move '%1'":"Fehler beim Verschieben von '%1'!",
 "Failed to move favorite!":"Fehler beim Verschieben von Favoriten!",
@@ -146,6 +153,7 @@
 "Favorites":"Favoriten",
 "Fetching...":"Hole Daten...",
 "Fixed Volume":"Fixierte Lautstärke",
+"Follow link":"Link öffnen",
 "Fri":"Fre",
 "Friday":"Freitag",
 "General":"Allgemein",
@@ -195,6 +203,7 @@
 "Move the queue to:":"Verschiebe Warteschlange nach:",
 "Move to next in queue":"Als nächstes wiedergeben",
 "Move to parent folder":"In übergeordneten Ordner verschieben",
+"Music sources":"Musikquellen",
 "Mute":"Stumm schalten",
 "My Music":"Meine Musik",
 "NOTE:'Application layout' is not saved, as this is a per-device setting.":"HINWEIS: Das Anwendungs-Layout wird nicht gespeichert, da diese Einstellung gerätespezifisch ist.",
@@ -206,6 +215,7 @@
 "No entries found":"Keine Einträge gefunden",
 "No fade":"Kein Überblenden",
 "No repeat":"Nicht wiederholen",
+"No results found":"Keine Ergebnisse gefunden",
 "No shuffle":"Zufällige Wiedergabe aus",
 "None":"Nichts",
 "Nothing playing":"Keine Wiedergabe",
@@ -230,6 +240,8 @@
 "Playing %1":"%1 wird wiedergegeben",
 "Playing %1 by %2":"%1 von %2 wird wiedergegeben",
 "Playing %1 by %2 from %3":"%1 von %2 aus %3 wird wiedergegeben",
+"Playlist has no duplicates":"Wiedergabeliste hat keine doppelten Einträge",
+"Playlist has no tracks":"Wiedergabeliste hat keine Einträge",
 "Power on all group members when playing to group.":"Alle Gruppenmitglieder einschalten, wenn Wiedergabe auf Gruppe gestartet wird.",
 "Power on all upon play":"Alle Geräte bei Wiedergabe einschalten",
 "Power on/off all":"Alle Geräte ein-/ausschalten",
@@ -249,6 +261,8 @@
 "Remove album":"Album entfernen",
 "Remove all selected items":"Alle ausgewählten Einträge entfernen",
 "Remove all tracks from queue?":"Warteschlange leeren?",
+"Remove duplicate tracks?":"Doppelte Einträge entfernen?",
+"Remove duplicates":"Doppelte Einträge entfernen",
 "Remove from favorites":"Aus Favoriten entfernen",
 "Remove the selected items?":"Ausgewählte Einträge entfernen?",
 "Rename":"Umbenennen",
@@ -276,6 +290,7 @@
 "Scroll queue to current track":"Zum aktuellen Titel der Warteschlange springen",
 "Search":"Suche",
 "Search for podcasts":"Podcasts suchen",
+"Search on...":"Suche auf...",
 "Select":"Auswählen",
 "Select All":"Alle auswählen",
 "Select category":"Kategorie auswählen",
@@ -355,6 +370,7 @@
 "Theme":"Erscheinungsbild",
 "This will remove the 'virtual library', but will not delete the actual music files contained within.":"Die virtuelle Bibliothek wird entfernt, die darin enthaltenen Musikdateien aber nicht gelöscht.",
 "This will remove the folder, and any favorites contained within.":"Der Ordner und alle darin enthaltenen Favoriten werden entfernt.",
+"This will remove tracks with the same artist and title.":"Einträge mit demselben Interpreten und Titel entfernen",
 "Three lines":"Drei Zeilen",
 "Thurs":"Don",
 "Thursday":"Donnerstag",
@@ -436,38 +452,23 @@
 "%1 Years":"%1 Jahre",
 "1 day":"Ein Tag",
 "%1 days":"%1 Tage",
-"Add to playlist":"Zur Wiedergabeliste hinzufügen",
-"Added to '%1'":"Zu '%1' hinzugefügt",
-"All duplicates removed":"Alle doppelten Einträge entfernt",
 "Alt+%1":"",
 "Alt+N":"",
 "Audio":"",
 "Disc %1":"",
 "E-Mail":"",
-"Edit podcast":"Podcast bearbeiten",
-"Failed edit podcast":"Fehler beim Bearbeiten des Podcasts",
-"Failed to add to playlist!":"Fehler beim Hinzufügen zur Wiedergabeliste",
-"Failed to fetch podcast URL":"Fehler beim Abrufen der Podcast-URL",
 "Firmware: %1":"",
-"Follow link":"Link öffnen",
 "IP: %1":"",
 "Information":"",
 "Mon":"",
-"Music sources":"Musikquellen",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":"",
 "Name":"",
-"No results found":"Keine Ergebnisse gefunden",
 "OK":"",
 "Pause":"",
-"Playlist has no duplicates":"Wiedergabeliste hat keine doppelten Einträge",
-"Playlist has no tracks":"Wiedergabeliste hat keine Einträge",
 "Plugins":"",
 "Radio":"",
-"Remove duplicate tracks?":"Doppelte Einträge entfernen?",
-"Remove duplicates":"Doppelte Einträge entfernen",
-"Search on...":"Suche auf...",
 "Server":"",
 "Start":"",
-"This will remove tracks with the same artist and title.":"Einträge mit demselben Interpreten und Titel entfernen",
 "URL":"",
 "Version":"",
 "⌘+%1":""
