@@ -221,6 +221,7 @@
 "Music sources":"",
 "Mute":"",
 "My Music":"",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":"",
 "NOTE:'Application layout' is not saved, as this is a per-device setting.":"",
 "Name":"",
 "New version available":"",
