@@ -470,5 +470,6 @@
 "1 Year":"1 année",
 "%1 Years":"%1 années",
 "1 day":"1 jour",
-"%1 days":"%1 jours"
+"%1 days":"%1 jours",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":""
 }
