@@ -374,6 +374,7 @@
 "Move selection here":"",
 "Move the queue to:":"",
 "Music sources":"",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":"",
 "NOTE:'Application layout' is not saved, as this is a per-device setting.":"",
 "New version available":"",
 "Next track":"",
