@@ -470,5 +470,6 @@
 "1 Year":"1 Jaar",
 "%1 Years":"%1 Jaren",
 "1 day":"1 dag",
-"%1 days":"%1 dagen"
+"%1 days":"%1 dagen",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":""
 }
