@@ -448,6 +448,7 @@
 "Go to composer":"",
 "Move the queue to:":"",
 "Music sources":"",
+"NOTE: Folders are always sorted, this setting only affects non-folder items.":"",
 "No entries found":"",
 "No results found":"",
 "Playing %1":"",
